# python-utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yaml
src/withpi_utils/: __about__.py  __init__.py  colab.py  jobs.py  question_builders.py  scorer_builder.py  scoring_spec_builder.py
tests/: test_colab.py  test_jobs.py  test_question_builders.py  test_scorer_builder.py
tests/data/: calibrate_request.json  scoring_spec.json  seed_request.json  synthetic_data_request.json
withpi_utils/: __about__.py
