[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "withpi-utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Zach Clifford", email = "zach@withpi.ai" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "ipython>=7.34.0",
    "markdown>=3.7",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "withpi>=1.24.0",
]

[project.urls]
Documentation = "https://github.com/withpi/python-utils#readme"
Issues = "https://github.com/withpi/python-utils/issues"
Source = "https://github.com/withpi/python-utils"

[tool.hatch.version]
path = "src/withpi_utils/__about__.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as being production integration tests",
]
addopts = "-m 'not integration'"
asyncio_default_fixture_loop_scope = "function"
